fix: Footer bug fixed
flex-display and direction (column) along with margin-top in footer (auto) in order to keep the footer below without any extra spaces.

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 hr {
@@ -131,6 +134,7 @@ hr {
     color: white;
     text-align: center;
     border-top-right-radius: 1rem;
+    margin-top: auto;
 }
 
 .footer .link {
